[gd_scene load_steps=28 format=3 uid="uid://cswinrop881oo"]

[ext_resource type="Script" path="res://src/user_interface.gd" id="1_j28fq"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_s7754"]
[ext_resource type="Texture2D" uid="uid://b5gtwrgnirbxg" path="res://assets/custom/YellowMana.png" id="3_x0b3x"]
[ext_resource type="Texture2D" uid="uid://c0mxwj13dwpml" path="res://assets/custom/PurpleMana.png" id="4_o6t76"]
[ext_resource type="Texture2D" uid="uid://ykuefae3vde0" path="res://assets/custom/Energy.png" id="5_hqwjq"]
[ext_resource type="Texture2D" uid="uid://bkk1x2nsynl6x" path="res://assets/custom/CardIcon.png" id="6_qk0s7"]
[ext_resource type="Texture2D" uid="uid://6kjw6wo7u7bw" path="res://assets/custom/EndTurn.png" id="7_dv2x3"]
[ext_resource type="Texture2D" uid="uid://b2k8jysorsjw1" path="res://assets/custom/EndTurnClick.png" id="8_fmhkd"]
[ext_resource type="Texture2D" uid="uid://jlxw6ypagasj" path="res://assets/custom/EndTurnHover.png" id="9_y4jq3"]
[ext_resource type="Texture2D" uid="uid://c446mynw3jgpo" path="res://assets/CardBorder.png" id="10_8fmjs"]
[ext_resource type="Texture2D" uid="uid://c8cs8b5ibrdjn" path="res://icon.svg" id="11_cpxin"]
[ext_resource type="Script" path="res://src/cards/DeckDraw.gd" id="12_73glk"]
[ext_resource type="FontFile" uid="uid://drlkmr7jve2ep" path="res://assets/m5x7.ttf" id="13_3dxy7"]
[ext_resource type="PackedScene" uid="uid://bi0v8rdp8e0sq" path="res://src/farm/tile_preview.tscn" id="14_auyx1"]
[ext_resource type="Texture2D" uid="uid://ddooce1phh2xs" path="res://assets/custom/ShopButton.png" id="14_m3jdw"]
[ext_resource type="Texture2D" uid="uid://by5wpf5vbkrw1" path="res://assets/custom/Card.png" id="14_xuayx"]
[ext_resource type="PackedScene" uid="uid://djb7edsvibm5i" path="res://src/fortune/fortune_teller.tscn" id="15_yqxvh"]
[ext_resource type="PackedScene" uid="uid://cg2lu7ivw8gms" path="res://src/event/game_event_dialog.tscn" id="16_a3egv"]
[ext_resource type="PackedScene" uid="uid://dnb3c3pbmh6yl" path="res://src/ui/end_screen.tscn" id="16_r2tbl"]
[ext_resource type="Theme" uid="uid://c3hfmpsb3fvhr" path="res://assets/game_theme.tres" id="17_ohqvn"]
[ext_resource type="PackedScene" uid="uid://ch1l0jofkrynh" path="res://src/shop/shop.tscn" id="17_q7vph"]
[ext_resource type="PackedScene" uid="uid://dichc631kb472" path="res://src/ui/alert.tscn" id="18_ih37u"]
[ext_resource type="PackedScene" uid="uid://dvjkkex6w162i" path="res://src/upgrade/upgrade_shop.tscn" id="18_wm5tb"]
[ext_resource type="Texture2D" uid="uid://nkbrmv4f3xqe" path="res://assets/ui/obelisk_empty.png" id="19_83y2t"]
[ext_resource type="PackedScene" uid="uid://cs4xf7kyndygr" path="res://src/ui/tooltip.tscn" id="20_dvki6"]
[ext_resource type="Texture2D" uid="uid://cn32li0bwuw1e" path="res://assets/ui/obelisk_full.png" id="20_udohm"]
[ext_resource type="PackedScene" uid="uid://bb1j26ivcxqw6" path="res://src/ui/tutorial.tscn" id="22_4s3pk"]

[node name="UserInterface" type="Node2D"]
script = ExtResource("1_j28fq")

[node name="Tutorial" parent="." instance=ExtResource("22_4s3pk")]
position = Vector2(1368, 0)

[node name="Obelisk" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = 510.0
offset_top = 168.0
offset_right = 542.0
offset_bottom = 260.0
scale = Vector2(2.7, 2.7)
value = 50.0
fill_mode = 2
texture_under = ExtResource("20_udohm")
texture_progress = ExtResource("19_83y2t")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="RitualPanel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 502.0
offset_top = 416.0
offset_right = 595.0
offset_bottom = 457.0

[node name="RitualCounter" type="HBoxContainer" parent="UI/RitualPanel"]
layout_mode = 2
theme = ExtResource("2_s7754")

[node name="Label" type="RichTextLabel" parent="UI/RitualPanel/RitualCounter"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "300"
scroll_active = false
text_direction = 2

[node name="TextureRect" type="TextureRect" parent="UI/RitualPanel/RitualCounter"]
layout_mode = 2
texture = ExtResource("3_x0b3x")
stretch_mode = 5

[node name="BlightPanel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 1346.0
offset_top = 412.0
offset_right = 1420.0
offset_bottom = 453.0

[node name="VBox" type="VBoxContainer" parent="UI/BlightPanel"]
layout_mode = 2

[node name="BlightCounter" type="HBoxContainer" parent="UI/BlightPanel/VBox"]
layout_mode = 2
theme = ExtResource("2_s7754")

[node name="TextureRect" type="TextureRect" parent="UI/BlightPanel/VBox/BlightCounter"]
layout_mode = 2
texture = ExtResource("4_o6t76")
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="UI/BlightPanel/VBox/BlightCounter"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "42"
fit_content = true

[node name="NextTurnLabel" type="RichTextLabel" parent="UI/BlightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_s7754")
bbcode_enabled = true
text = "( Next Turn: 0 )"
fit_content = true
autowrap_mode = 0

[node name="BlightDamage" type="HBoxContainer" parent="UI/BlightPanel/VBox"]
visible = false
layout_mode = 2

[node name="Stats" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 77.0
theme = ExtResource("2_s7754")

[node name="VBox" type="VBoxContainer" parent="UI/Stats"]
layout_mode = 2

[node name="YearLabel" type="Label" parent="UI/Stats/VBox"]
layout_mode = 2
mouse_filter = 0
text = "Year 1"

[node name="TurnLabel" type="Label" parent="UI/Stats/VBox"]
layout_mode = 2
text = "Week 1"

[node name="EnergyHbox" type="HBoxContainer" parent="UI/Stats/VBox"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="UI/Stats/VBox/EnergyHbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0/3 Energy"

[node name="EnergyTexture" type="TextureRect" parent="UI/Stats/VBox/EnergyHbox"]
layout_mode = 2
texture = ExtResource("5_hqwjq")
expand_mode = 2

[node name="Fragments" type="HBoxContainer" parent="UI/Stats/VBox/EnergyHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardsHbox" type="HBoxContainer" parent="UI/Stats/VBox"]
layout_mode = 2

[node name="CardsLabel" type="Label" parent="UI/Stats/VBox/CardsHbox"]
layout_mode = 2
text = "Cards:"

[node name="CardsTexture" type="TextureRect" parent="UI/Stats/VBox/CardsHbox"]
layout_mode = 2
texture = ExtResource("6_qk0s7")
expand_mode = 2

[node name="Fragments" type="HBoxContainer" parent="UI/Stats/VBox/CardsHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndTurnButton" type="TextureButton" parent="UI"]
layout_mode = 0
offset_left = 1701.0
offset_top = 619.0
offset_right = 1801.0
offset_bottom = 669.0
scale = Vector2(2, 2)
texture_normal = ExtResource("7_dv2x3")
texture_pressed = ExtResource("8_fmhkd")
texture_hover = ExtResource("9_y4jq3")

[node name="Deck" type="Node2D" parent="UI"]
position = Vector2(24, 914)
scale = Vector2(0.439903, 0.409635)

[node name="DeckPeek" type="TextureButton" parent="UI/Deck"]
offset_left = -27.2787
offset_top = 14.6472
offset_right = 222.721
offset_bottom = 364.647
texture_normal = ExtResource("10_8fmjs")
texture_disabled = ExtResource("11_cpxin")
script = ExtResource("12_73glk")

[node name="DeckCount" type="Label" parent="UI/Deck"]
offset_left = -4.54645
offset_top = 29.2944
offset_right = 65.4536
offset_bottom = 70.2944
theme = ExtResource("2_s7754")
theme_override_font_sizes/font_size = 60
text = "Deck
"

[node name="DiscardPeek" type="TextureButton" parent="UI/Deck"]
offset_left = 4037.25
offset_top = 24.412
offset_right = 4287.25
offset_bottom = 374.412
texture_normal = ExtResource("14_xuayx")
stretch_mode = 0

[node name="DiscardCount" type="Label" parent="UI/Deck"]
offset_left = 4059.99
offset_top = 39.0592
offset_right = 4176.99
offset_bottom = 80.0592
theme = ExtResource("2_s7754")
theme_override_font_sizes/font_size = 60
text = "Discard"

[node name="Preview" type="MarginContainer" parent="UI"]
z_index = 1
layout_mode = 0
offset_left = 917.0
offset_top = 44.0
offset_right = 1035.0
offset_bottom = 85.0
theme = ExtResource("2_s7754")

[node name="Panel" type="PanelContainer" parent="UI/Preview"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="UI/Preview/Panel"]
layout_mode = 2

[node name="PreviewYellow" type="Label" parent="UI/Preview/Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.898039, 0.909804, 0.192157, 1)
theme_override_fonts/font = ExtResource("13_3dxy7")
theme_override_font_sizes/font_size = 50
text = "+12"
horizontal_alignment = 2

[node name="PreviewPurple" type="Label" parent="UI/Preview/Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.623529, 0.470588, 0.890196, 1)
theme_override_fonts/font = ExtResource("13_3dxy7")
theme_override_font_sizes/font_size = 50
text = "+12"

[node name="SkipButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 283.0
offset_top = 376.0
offset_right = 354.0
offset_bottom = 425.0
theme = ExtResource("2_s7754")
text = "Skip"

[node name="TilePreview" parent="UI" instance=ExtResource("14_auyx1")]
visible = false
position = Vector2(1595, 123)

[node name="FortuneDisplay" type="Node2D" parent="UI"]
position = Vector2(1346, 360)

[node name="RTFPanel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 656.0
offset_right = 116.0
offset_bottom = 754.0
theme = ExtResource("17_ohqvn")

[node name="VBox" type="VBoxContainer" parent="UI/RTFPanel"]
layout_mode = 2

[node name="ShapeLabel" type="Label" parent="UI/RTFPanel/VBox"]
layout_mode = 2
text = "Shape: Line"

[node name="KeysLabel" type="Label" parent="UI/RTFPanel/VBox"]
layout_mode = 2
text = "T: Transform
R: Rotate
F: Flip"

[node name="AlertContainer" parent="UI" instance=ExtResource("18_ih37u")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 415.0
offset_bottom = 41.0

[node name="Winter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_s7754")

[node name="ShopButton" type="TextureButton" parent="Winter"]
layout_mode = 0
offset_left = 1781.0
offset_top = -1.0
offset_right = 1851.0
offset_bottom = 69.0
scale = Vector2(2, 2)
texture_normal = ExtResource("14_m3jdw")

[node name="NextYearButton" type="Button" parent="Winter"]
layout_mode = 0
offset_left = 235.0
offset_top = 114.0
offset_right = 405.0
offset_bottom = 163.0
text = "Next Year"

[node name="FortuneTellerButton" type="Button" parent="Winter"]
layout_mode = 0
offset_left = 832.0
offset_top = 835.0
offset_right = 1074.0
offset_bottom = 884.0
text = "Fortune Teller"

[node name="FarmUpgradeButton" type="Button" parent="Winter"]
layout_mode = 0
offset_left = 254.0
offset_top = 434.0
offset_right = 392.0
offset_bottom = 483.0
text = "Upgrade"

[node name="EventPanel" type="PanelContainer" parent="Winter"]
layout_mode = 0
offset_left = 1454.0
offset_top = 380.0
offset_right = 1628.0
offset_bottom = 474.0

[node name="VB" type="VBoxContainer" parent="Winter/EventPanel"]
layout_mode = 2

[node name="EventNameLabel" type="Label" parent="Winter/EventPanel/VB"]
layout_mode = 2
text = "EventName"
horizontal_alignment = 1

[node name="EventButton" type="Button" parent="Winter/EventPanel/VB"]
layout_mode = 2
text = "Event"

[node name="ViewDeck" type="Button" parent="Winter"]
layout_mode = 0
offset_left = 12.0
offset_top = 1016.0
offset_right = 178.0
offset_bottom = 1065.0
text = "View Deck"

[node name="EndScreen" parent="." instance=ExtResource("16_r2tbl")]
visible = false

[node name="FortuneTeller" parent="." instance=ExtResource("15_yqxvh")]
visible = false

[node name="GameEventDialog" parent="." instance=ExtResource("16_a3egv")]
visible = false

[node name="Shop" parent="." instance=ExtResource("17_q7vph")]
visible = false

[node name="UpgradeShop" parent="." instance=ExtResource("18_wm5tb")]
visible = false

[node name="Tooltip" parent="." instance=ExtResource("20_dvki6")]
visible = false

[connection signal="pressed" from="UI/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="UI/Deck/DeckPeek" to="." method="_on_deck_peek_pressed"]
[connection signal="pressed" from="UI/Deck/DiscardPeek" to="." method="_on_discard_peek_pressed"]
[connection signal="pressed" from="UI/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="Winter/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="Winter/NextYearButton" to="." method="_on_next_year_button_pressed"]
[connection signal="pressed" from="Winter/FortuneTellerButton" to="." method="_on_fortune_teller_button_pressed"]
[connection signal="pressed" from="Winter/FarmUpgradeButton" to="." method="_on_farm_upgrade_button_pressed"]
[connection signal="pressed" from="Winter/EventPanel/VB/EventButton" to="." method="_on_event_button_pressed"]
[connection signal="pressed" from="Winter/ViewDeck" to="." method="_on_shop_view_deck"]
[connection signal="on_close" from="FortuneTeller" to="." method="_on_fortune_teller_on_close"]
[connection signal="on_upgrades_selected" from="GameEventDialog" to="." method="_on_game_event_dialog_on_upgrades_selected"]
[connection signal="on_blight_removed" from="Shop" to="." method="_on_shop_on_blight_removed"]
[connection signal="on_card_removed" from="Shop" to="." method="_on_shop_on_card_removed"]
[connection signal="on_item_bought" from="Shop" to="." method="_on_shop_on_item_bought"]
[connection signal="on_money_spent" from="Shop" to="." method="_on_shop_on_money_spent"]
[connection signal="on_shop_closed" from="Shop" to="." method="_on_shop_on_shop_closed"]
[connection signal="on_structure_place" from="Shop" to="." method="_on_shop_on_structure_place"]
[connection signal="view_deck" from="Shop" to="." method="_on_shop_view_deck"]
[connection signal="on_close" from="UpgradeShop" to="." method="upgrade_shop_close"]
[connection signal="on_upgrade" from="UpgradeShop" to="." method="_on_upgrade_shop_on_upgrade"]
